# meshcore-ble-connect

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: DESIGN.md  TECHNICAL_REFERENCE.md  USER_REFERENCE.md
meshcore_ble_connect/: DEVELOPER_INTEGRATION.md  __init__.py  __main__.py  adapter.py  agent.py  app.py  bus.py  constants.py  device.py  discovery.py  exceptions.py  output.py  pin.py
systemd/: meshcore-ble-connect.service
