[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meshcore-ble-connect"
version = "1.0.0"
description = "Standalone BLE Connection Manager — ensures a BLE bond via D-Bus before your application starts."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "dbus-fast>=2.22.1,<3.0.0",
]

[project.scripts]
meshcore-ble-connect = "meshcore_ble_connect.__main__:main"

[tool.setuptools.packages.find]
include = ["meshcore_ble_connect*"]
